--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT = 4000
-DB_URL =mongodb://localhost:27017/taskmanager
+DB_URL =mongodb+srv://mmkhan213:vR3gu65FjL4HGQaM@cluster0.2cslt5c.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your_secret_key
